--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
     }
   },
   "require": {
-    "msbios/msbios": "^0.0.1",
     "zendframework/zend-i18n": "^2.7",
     "zendframework/zend-modulemanager": "^2.8",
     "zendframework/zend-servicemanager": "^3.3",
-    "zendframework/zend-session": "^2.8"
+    "zendframework/zend-session": "^2.8",
+    "msbios/msbios": "^0.0.1"
   },
   "require-dev": {
     "zendframework/zend-test": "^3.1",
