--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
     "zendframework/zend-modulemanager": "^2.8",
     "zendframework/zend-servicemanager": "^3.3",
     "zendframework/zend-session": "^2.8",
-    "msbios/msbios": "^0.0.1"
+    "msbios/msbios": "~1.0"
   },
   "require-dev": {
-    "zendframework/zend-test": "^3.1",
     "phpunit/phpunit": "^5.7",
+    "zendframework/zend-test": "^3.1",
     "squizlabs/php_codesniffer": "^3.0"
   },
   "scripts": {
