--- a/composer.json
+++ b/composer.json
@@ -25,23 +25,26 @@
   },
   "require": {
     "zendframework/zend-i18n": "^2.7",
-    "zendframework/zend-modulemanager": "^2.8",
-    "zendframework/zend-servicemanager": "^3.3",
     "zendframework/zend-session": "^2.8",
-    "msbios/msbios": "~1.0"
+    "msbios/msbios": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7",
-    "zendframework/zend-test": "^3.1",
-    "squizlabs/php_codesniffer": "^3.0"
+    "msbios/test": "^1.0"
   },
   "scripts": {
     "cs-check": "phpcs",
     "cs-fix": "phpcbf",
     "test": [
       "@cs-check",
-      "phpunit"
+      "phpunit --colors=always"
     ],
+    "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
+    "upload-coverage": "coveralls -v",
     "commit": "git add . && git commit -a -m \"Lazy Composer Commiter\" && git push"
+  },
+  "extra": {
+    "zf": {
+      "component": "MSBios\\I18n"
+    }
   }
 }
