--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,20 @@
     }
   },
   "require": {
+    "php": "^5.6 || ^7.0",
     "zendframework/zend-i18n": "^2.7",
     "zendframework/zend-session": "^2.8",
     "msbios/msbios": "^1.0"
   },
   "require-dev": {
-    "msbios/test": "^1.0"
+    "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
+    "zendframework/zend-mvc": "^3.0.1",
+    "zendframework/zend-mvc-plugins": "^1.0",
+    "zendframework/zend-router": "^3.0",
+    "zendframework/zend-cache": "^2.7",
+    "zendframework/zend-serializer": "^2.8",
+    "msbios/test": "^1.0",
+    "msbios/debug": "^1.0"
   },
   "scripts": {
     "cs-check": "phpcs",
@@ -40,7 +48,8 @@
     ],
     "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
     "upload-coverage": "coveralls -v",
-    "commit": "git add . && git commit -a -m \"Lazy Composer Commiter\" && git push"
+    "commit": "git add . && git commit -a -m \"Lazy Composer Commiter\" && git push",
+    "serve": "php -S 0.0.0.0:3107 -t public public/index.php"
   },
   "extra": {
     "zf": {
