--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     "upload-coverage": "coveralls -v",
     "commit": "git add . && git commit -a -m \"Lazy Composer Commiter\" && git push",
     "msgfmt": "find . -name \\*.po -execdir sh -c 'msgfmt \"$0\" -o `basename $0 .po`.mo' '{}' \\;",
-    "serve": "php -S 0.0.0.0:3107 -t public public/index.php"
+    "serve": "php -S 0.0.0.0:3107 -t public index.php"
   },
   "extra": {
     "zf": {
