--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,10 @@
     }
   },
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.0 || ^7.1 || ^7.2",
     "zendframework/zend-i18n": "^2.7",
-    "msbios/session": "^1.0"
+    "msbios/session": "^1.0",
+    "ext-intl": "*"
   },
   "require-dev": {
     "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
