Lazy Composer MSBios Commit Script

--- a/composer.json
+++ b/composer.json
@@ -27,20 +27,21 @@
     }
   },
   "require": {
-    "php": "^7.0 || ^7.1 || ^7.2",
+    "php": "^7.0 || ^7.1 || ^7.2 || ^7.3",
     "ext-intl": "*",
-    "zendframework/zend-i18n": "^2.7",
-    "msbios/session": "^1.0"
+    "laminas/laminas-i18n": "^2.10",
+    "msbios/session": "^2.0"
   },
   "require-dev": {
-    "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-    "zendframework/zend-mvc": "^3.0.1",
-    "zendframework/zend-mvc-plugins": "^1.0",
-    "zendframework/zend-router": "^3.0",
-    "zendframework/zend-cache": "^2.7",
-    "zendframework/zend-serializer": "^2.8",
-    "msbios/test": "^1.0",
-    "msbios/debug": "^1.0"
+    "laminas/laminas-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
+    "laminas/laminas-mvc": "^3.1",
+    "laminas/laminas-mvc-plugins": "^1.0",
+    "laminas/laminas-router": "^3.3",
+    "laminas/laminas-cache": "^2.9",
+    "laminas/laminas-serializer": "^2.9",
+    "msbios/test": "^2.0",
+    "msbios/debug": "^2.0",
+    "laminas/laminas-migration": "^1.1"
   },
   "scripts": {
     "cs-check": "phpcs",
